@@ -171,6 +171,8 @@ module Braintree
       when :create
         options << :fail_on_duplicate_payment_method
         signature << :customer_id
+        signature << :paypal_refresh_token
+        signature << :paypal_vault_without_upgrade
       when :update
         billing_address_params << {:options => [:update_existing]}
       else
