@@ -566,6 +566,41 @@ describe Braintree::PaymentMethod do
         found_paypal_account.should_not be_nil
       end
 
+      it "creates a billing agreement payment method from a refresh token" do
+        customer = Braintree::Customer.create.customer
+        result = Braintree::PaymentMethod.create(
+          :customer_id => customer.id,
+          :paypal_refresh_token => "some_future_payment_token",
+        )
+
+        result.should be_success
+        result.payment_method.should be_a(Braintree::PayPalAccount)
+        result.payment_method.billing_agreement_id.should eq("B_FAKE_ID")
+        token = result.payment_method.token
+
+        found_paypal_account = Braintree::PayPalAccount.find(token)
+        found_paypal_account.should_not be_nil
+        found_paypal_account.billing_agreement_id.should eq("B_FAKE_ID")
+      end
+
+      it "creates a billing agreement payment method from a refresh token without upgrading" do
+        customer = Braintree::Customer.create.customer
+        result = Braintree::PaymentMethod.create(
+          :customer_id => customer.id,
+          :paypal_refresh_token => "some_future_payment_token",
+          :paypal_vault_without_upgrade => true,
+        )
+
+        result.should be_success
+        result.payment_method.should be_a(Braintree::PayPalAccount)
+        result.payment_method.billing_agreement_id.should be_nil
+        token = result.payment_method.token
+
+        found_paypal_account = Braintree::PayPalAccount.find(token)
+        found_paypal_account.should_not be_nil
+        found_paypal_account.billing_agreement_id.should be_nil
+      end
+
       it "does not create a payment method from an unvalidated onetime paypal account nonce" do
         customer = Braintree::Customer.create.customer
         nonce = nonce_for_paypal_account(:access_token => "PAYPAL_ACCESS_TOKEN")
